test/error/TypeRangeMinLimit.fu
public static class Test
{
	public static bool Run()
	{
		-5000000000 .. 100 i = 0; //ERROR: Only 32-bit ranges supported
		return true;
	}
}
